fixed breadcrumbs wrap bug on mobile devices

--- a/#src/scss/style.sass
+++ b/#src/scss/style.sass
@@ -201,6 +201,10 @@
 		flex-wrap: wrap
 		justify-content: flex-start
 		position: relative
+		width: 100%
+
+		@media screen and (max-width: $media-sm)
+			align-items: flex-start
 
 	&__list-item
 		display: flex
